manifests/cafe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kopi
  template:
    metadata:
      labels:
        app: kopi
    spec:
      containers:
      - name: kopi
        image: tsanghan/kopi-teh:0.5.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kopi-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: kopi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teh
  template:
    metadata:
      labels:
        app: teh
    spec:
      containers:
      - name: teh
        image: tsanghan/kopi-teh:0.5.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: teh-svc
  labels:
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: teh
