manifests/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    appprotect.f5.com/app-protect-policy: "default/nginxstrict"
    appprotect.f5.com/app-protect-enable: "True"
spec:
  ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - pathType: Prefix 
        path: /teh
        backend:
          service:
            name: teh-svc
            port:
              number: 80
      - pathType: Prefix
        path: /kopi
        backend:
          service:
            name: kopi-svc
            port:
              number: 80
