manifests/ingress-nic.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nic
  annotations:
    nginx.org/rewrites: "serviceName=svc-deploy-nginx rewrite=/"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: "www.0afefef0.k8s.lab"
    http:
      paths:
      - path: /hi
        pathType: Prefix
        backend:
          service:
            name: svc-deploy-nginx
            port:
              number: 80
