manifests/mongodb-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: mongo-demo-express
  namespace: mongodb
spec:
  ingressClassName: nginx
  rules:
    # - host: mongo-express.local
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
